<resources>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <!-- <string name="facebook_app_id">429297778093935</string>
    <string name="fb_login_protocol_scheme">fb429297778093935</string> -->
    <string name="facebook_application_id" translatable="false">429297778093935</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb429297778093935</string>

    <!-- Functional strings for open and close the navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">Go4Lunch</string>
    <string name="nav_bottom_map_view" translatable="false">Carte</string>
    <string name="nav_bottom_list_view" translatable="false">Liste</string>
    <string name="nav_bottom_workmates" translatable="false">Collègues</string>

    <!-- Main Activity -->
    <string name="login_succeed" translatable="false">Authentification réussite !</string>
    <string name="login_filed" translatable="false">Erreur d\'authentification&#8230;</string>
    <string name="your_lunch" translatable="false">Mon restaurant</string>
    <string name="sidebar_menu_settings" translatable="false">Paramètres</string>
    <string name="sidebar_menu_logout" translatable="false">Se déconnecter</string>
    <!-- Main Activity Error messages -->
    <string name="google_maps_not_available">Le service Google Maps n\'est pas disponible.</string>
    <string name="localisation_not_available">Il vous faut activer le localisation pour bon fonctionnement de l\'application. </string>

    <!-- Main Activity __menu_drawer -->
    <string name="menu_persona_description">Image de la personne connecté</string>

    <!-- Main Activity __menu_toolbar -->
    <string name="search">recherche</string>
    <string name="search_hint">Nom de restaurant</string>

    <!-- Login Firebase -->
    <string name="slogan">Trouvez une restaurant sympa et invite tes collèques à dîner!</string>
    <string name="btn_text_google">Connection avec Google</string>
    <string name="btn_text_facebook">Connection avec Facebook</string>
    <string name="btn_text_email">Connection avec email</string>

    <!-- About the restaurant activity -->
    <string name="action_settings">Paramètres</string>
    <string name="call">APPEL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="star1">Star one</string>
    <string name="star2">Star two</string>
    <string name="star3">Star tree</string>
    <string name="title_activity_about_restaurant"> </string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Paramètres</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Settings & Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notification_category">Notifications</string>
    <string name="notification_active">Activés</string>
    <string name="notification_inactive">Désactivés</string>
    <string name="hour">Heure d\'affichage</string>
    <string name="localisation_category">Localisation</string>
    <string name="account_category">Compte</string>
    <string name="delete_account">Supprimer le compte</string>
    <string name="perimeter_research">Périmètre de recherche</string>

    <!-- View Widgets -->
    <string name="snack_action_btn">Ok</string>
    <string name="thanks">Merci</string>

    <!-- AlertDialog widget -->
    <string name="alert_title">Suppression du compte !</string>
    <string name="alert_message">Voulez-vous supprimer definitivement votre compte ?</string>
    <string name="btn_ok">Supprimer</string>
    <string name="btn_cancel">Annuler</string>
    <string name="cancel_message">Suppression du compte annulé.</string>

    <!--<string name="title_activity_about_restaurant">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>-->
</resources>