<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notification_category">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_notifications_24"
            app:key="notification"
            app:title="Notifications"
            app:summaryOff="@string/notification_inactive"
            app:summaryOn="@string/notification_active"/>

        <ListPreference
            app:defaultValue="12"
            app:dependency="notification"
            app:entries="@array/hour_entries"
            app:entryValues="@array/hour_values"
            app:icon="@drawable/ic_clock_time_primary_dark_24"
            app:key="hour"
            app:title="@string/hour"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="true"
        app:title="@string/research_category">

        <ListPreference
            app:defaultValue="max"
            app:entries="@array/perimeter_entries"
            app:entryValues="@array/perimeter_values"
            app:icon="@drawable/ic_explore_24"
            app:key="perimeter"
            app:title="@string/perimeter_research"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_category">

        <Preference
            app:icon="@drawable/ic_delete_primary_dark_24"
            app:key="delete_account"
            app:title="@string/delete_account" />
    </PreferenceCategory>


    <!--    <PreferenceCategory app:title="@string/messages_header">-->

    <!--        <EditTextPreference-->
    <!--            app:key="signature"-->
    <!--            app:title="@string/signature_title"-->
    <!--            app:useSimpleSummaryProvider="true" />-->

    <!--        <ListPreference-->
    <!--            app:defaultValue="reply"-->
    <!--            app:entries="@array/reply_entries"-->
    <!--            app:entryValues="@array/reply_values"-->
    <!--            app:key="reply"-->
    <!--            app:title="@string/reply_title"-->
    <!--            app:useSimpleSummaryProvider="true" />-->

    <!--    </PreferenceCategory>-->

    <!--    <PreferenceCategory app:title="@string/sync_header">-->

    <!--        <SwitchPreference-->
    <!--            app:key="sync"-->
    <!--            app:title="@string/sync_title" />-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:dependency="sync"-->
    <!--            app:key="attachment"-->
    <!--            app:summaryOff="@string/attachment_summary_off"-->
    <!--            app:summaryOn="@string/attachment_summary_on"-->
    <!--            app:title="@string/attachment_title" />-->

    <!--    </PreferenceCategory>-->
</PreferenceScreen>