<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map_view">

    <fragment
        android:id="@+id/navigation_map_view"
        android:name="com.pawel.p7_go4lunch.ui.mapView.MapViewFragment"
        android:label="@string/nav_bottom_map_view"
        tools:layout="@layout/fragment_map_view" />

    <fragment
        android:id="@+id/navigation_list_view"
        android:name="com.pawel.p7_go4lunch.ui.listView.ListViewFragment"
        android:label="@string/nav_bottom_list_view"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.pawel.p7_go4lunch.ui.workmates.WorkmatesFragment"
        android:label="@string/nav_bottom_workmates"
        tools:layout="@layout/fragment_workmates" />
    <activity
        android:id="@+id/about_the_restaurant_dest"
        android:name="com.pawel.p7_go4lunch.AboutRestaurantActivity"
        android:label="content_scrolling"
        tools:layout="@layout/content_scrolling" />
    <activity
        android:id="@+id/settings_activity"
        android:name="com.pawel.p7_go4lunch.SettingsActivity"
        android:label="SettingsActivity" />
</navigation>