<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_portrait">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="260dp"
        android:layout_height="230dp"
        android:layout_marginTop="@dimen/size_h"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_view_logo" />

    <Button
        android:id="@+id/email_btn"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/size_b"
        android:background="@drawable/background_email_btn"
        android:drawableStart="@drawable/ic_baseline_mail_outline_red_24"
        android:paddingHorizontal="@dimen/size_m"
        android:text="@string/btn_text_email"
        android:textAppearance="@style/com_facebook_button"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/facebook_btn"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/size_n"
        android:background="@drawable/background_facebook_btn"
        android:drawableStart="@drawable/ic_facebook"
        android:paddingHorizontal="@dimen/size_m"
        android:text="@string/btn_text_facebook"
        android:textAppearance="@style/com_facebook_button"
        app:layout_constraintBottom_toTopOf="@+id/twitter_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/twitter_btn"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/size_n"
        android:background="@drawable/background_twitter_btn"
        android:drawableStart="@drawable/ic_twitter"
        android:paddingHorizontal="@dimen/size_m"
        android:text="@string/btn_text_twitter"
        android:textAppearance="@style/com_facebook_button"
        app:layout_constraintBottom_toTopOf="@+id/email_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/google_btn"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_google_btn"
        android:drawableStart="@drawable/ic_google"
        android:paddingHorizontal="@dimen/size_m"
        android:text="@string/btn_text_google"
        android:textAppearance="@style/com_facebook_button"
        app:layout_constraintBottom_toTopOf="@+id/facebook_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>